--- a/src/Makefile.test.include
+++ b/src/Makefile.test.include
@@ -3,7 +3,7 @@
 # file COPYING or http://www.opensource.org/licenses/mit-license.php.
 
 if ENABLE_FUZZ_BINARY
-noinst_PROGRAMS += test/fuzz/fuzz
+# noinst_PROGRAMS += test/fuzz/fuzz
 endif
 
 if ENABLE_TESTS
@@ -237,138 +237,150 @@ FUZZ_SUITE_LD_COMMON += $(LIBBITCOIN_ZMQ) $(ZMQ_LIBS)
 endif
 
 if ENABLE_FUZZ_BINARY
-test_fuzz_fuzz_CPPFLAGS = $(AM_CPPFLAGS) $(BITCOIN_INCLUDES) $(BOOST_CPPFLAGS)
-test_fuzz_fuzz_CXXFLAGS = $(AM_CXXFLAGS) $(PIE_FLAGS)
-test_fuzz_fuzz_LDADD = $(FUZZ_SUITE_LD_COMMON)
-test_fuzz_fuzz_LDFLAGS = $(RELDFLAGS) $(AM_LDFLAGS) $(LIBTOOL_APP_LDFLAGS) $(PTHREAD_FLAGS) $(RUNTIME_LDFLAGS)
-test_fuzz_fuzz_SOURCES = \
- $(FUZZ_WALLET_SRC) \
- test/fuzz/addition_overflow.cpp \
- test/fuzz/addrman.cpp \
- test/fuzz/addrman_serdeser.cpp \
- test/fuzz/asmap.cpp \
- test/fuzz/asmap_direct.cpp \
- test/fuzz/autofile.cpp \
- test/fuzz/banman.cpp \
- test/fuzz/base_encode_decode.cpp \
- test/fuzz/bech32.cpp \
- test/fuzz/bip324_cipher_roundtrip.cpp \
- test/fuzz/bip324_ecdh.cpp \
- test/fuzz/bitdeque.cpp \
- test/fuzz/block.cpp \
- test/fuzz/block_header.cpp \
- test/fuzz/blockfilter.cpp \
- test/fuzz/bloom_filter.cpp \
- test/fuzz/buffered_file.cpp \
- test/fuzz/chacha20_split_crypt.cpp \
- test/fuzz/chacha20_split_keystream.cpp \
- test/fuzz/chain.cpp \
- test/fuzz/checkqueue.cpp \
- test/fuzz/coins_view.cpp \
- test/fuzz/coinscache_sim.cpp \
- test/fuzz/connman.cpp \
- test/fuzz/crypto.cpp \
- test/fuzz/crypto_aes256.cpp \
- test/fuzz/crypto_aes256cbc.cpp \
- test/fuzz/crypto_chacha20.cpp \
- test/fuzz/crypto_common.cpp \
- test/fuzz/crypto_fschacha20.cpp \
- test/fuzz/crypto_diff_fuzz_chacha20.cpp \
- test/fuzz/crypto_hkdf_hmac_sha256_l32.cpp \
- test/fuzz/crypto_poly1305.cpp \
- test/fuzz/crypto_poly1305_split.cpp \
- test/fuzz/cuckoocache.cpp \
- test/fuzz/data_stream_addr_man.cpp \
- test/fuzz/decode_tx.cpp \
- test/fuzz/descriptor_parse.cpp \
- test/fuzz/ellswift_roundtrip.cpp \
- test/fuzz/eval_script.cpp \
- test/fuzz/fee_rate.cpp \
- test/fuzz/fees.cpp \
- test/fuzz/flatfile.cpp \
- test/fuzz/float.cpp \
- test/fuzz/golomb_rice.cpp \
- test/fuzz/headers_sync_state.cpp \
- test/fuzz/hex.cpp \
- test/fuzz/http_request.cpp \
- test/fuzz/integer.cpp \
- test/fuzz/key.cpp \
- test/fuzz/key_io.cpp \
- test/fuzz/kitchen_sink.cpp \
- test/fuzz/load_external_block_file.cpp \
- test/fuzz/locale.cpp \
- test/fuzz/merkleblock.cpp \
- test/fuzz/message.cpp \
- test/fuzz/miniscript_script.cpp \
- test/fuzz/miniscript_smart.cpp \
- test/fuzz/miniscript_stable.cpp \
- test/fuzz/miniscript_string.cpp \
- test/fuzz/minisketch.cpp \
- test/fuzz/mini_miner.cpp \
- test/fuzz/mini_miner_selection.cpp \
- test/fuzz/mocked_descriptor_parse.cpp \
- test/fuzz/muhash.cpp \
- test/fuzz/multiplication_overflow.cpp \
- test/fuzz/net.cpp \
- test/fuzz/net_permissions.cpp \
- test/fuzz/netaddress.cpp \
- test/fuzz/netbase_dns_lookup.cpp \
- test/fuzz/node_eviction.cpp \
- test/fuzz/p2p_transport_bidirectional.cpp \
- test/fuzz/p2p_transport_bidirectional_v1v2.cpp \
- test/fuzz/p2p_transport_bidirectional_v2.cpp \
- test/fuzz/p2p_transport_serialization.cpp \
- test/fuzz/parse_hd_keypath.cpp \
- test/fuzz/parse_numbers.cpp \
- test/fuzz/parse_script.cpp \
- test/fuzz/parse_univalue.cpp \
- test/fuzz/partially_downloaded_block.cpp \
- test/fuzz/policy_estimator.cpp \
- test/fuzz/policy_estimator_io.cpp \
- test/fuzz/pool_resource.cpp \
- test/fuzz/pow.cpp \
- test/fuzz/prevector.cpp \
- test/fuzz/primitives_transaction.cpp \
- test/fuzz/process_message.cpp \
- test/fuzz/process_messages.cpp \
- test/fuzz/protocol.cpp \
- test/fuzz/psbt.cpp \
- test/fuzz/random.cpp \
- test/fuzz/rbf.cpp \
- test/fuzz/rolling_bloom_filter.cpp \
- test/fuzz/rpc.cpp \
- test/fuzz/script.cpp \
- test/fuzz/script_assets_test_minimizer.cpp \
- test/fuzz/script_bitcoin_consensus.cpp \
- test/fuzz/script_descriptor_cache.cpp \
- test/fuzz/script_flags.cpp \
- test/fuzz/script_format.cpp \
- test/fuzz/script_interpreter.cpp \
- test/fuzz/script_ops.cpp \
- test/fuzz/script_sigcache.cpp \
- test/fuzz/script_sign.cpp \
- test/fuzz/scriptnum_ops.cpp \
- test/fuzz/secp256k1_ec_seckey_import_export_der.cpp \
- test/fuzz/secp256k1_ecdsa_signature_parse_der_lax.cpp \
- test/fuzz/signature_checker.cpp \
- test/fuzz/signet.cpp \
- test/fuzz/socks5.cpp \
- test/fuzz/span.cpp \
- test/fuzz/spanparsing.cpp \
- test/fuzz/string.cpp \
- test/fuzz/str_printf.cpp \
- test/fuzz/system.cpp \
- test/fuzz/timedata.cpp \
- test/fuzz/torcontrol.cpp \
- test/fuzz/transaction.cpp \
- test/fuzz/tx_in.cpp \
- test/fuzz/tx_out.cpp \
- test/fuzz/txorphan.cpp \
- test/fuzz/txrequest.cpp \
- test/fuzz/utxo_snapshot.cpp \
- test/fuzz/utxo_total_supply.cpp \
- test/fuzz/validation_load_mempool.cpp \
- test/fuzz/versionbits.cpp
+
+FUZZ_TARGETS := \
+ test/fuzz/addition_overflow \
+ test/fuzz/addrman \
+ test/fuzz/addrman_serdeser
+
+noinst_PROGRAMS += $(FUZZ_TARGETS)
+
+
+$(FUZZ_TARGETS): % : %.cpp
+    $(CXX) $(AM_CPPFLAGS) $(BITCOIN_INCLUDES) $(BOOST_CPPFLAGS) -DDFUZZ_HARNESS=$@ $(AM_CXXFLAGS) $(PIE_FLAGS) -o $@ $< $(FUZZ_SUITE_LD_COMMON) $(RELDFLAGS) $(AM_LDFLAGS) $(LIBTOOL_APP_LDFLAGS) $(PTHREAD_FLAGS) $(RUNTIME_LDFLAGS)
+
+# test_fuzz_fuzz_CPPFLAGS = $(AM_CPPFLAGS) $(BITCOIN_INCLUDES) $(BOOST_CPPFLAGS)
+# test_fuzz_fuzz_CXXFLAGS = $(AM_CXXFLAGS) $(PIE_FLAGS)
+# test_fuzz_fuzz_LDADD = $(FUZZ_SUITE_LD_COMMON)
+# test_fuzz_fuzz_LDFLAGS = $(RELDFLAGS) $(AM_LDFLAGS) $(LIBTOOL_APP_LDFLAGS) $(PTHREAD_FLAGS) $(RUNTIME_LDFLAGS)
+# test_fuzz_fuzz_SOURCES = \
+#  $(FUZZ_WALLET_SRC) \
+#  test/fuzz/addition_overflow.cpp \
+#  test/fuzz/addrman.cpp \
+#  test/fuzz/addrman_serdeser.cpp \
+#  test/fuzz/asmap.cpp \
+#  test/fuzz/asmap_direct.cpp \
+#  test/fuzz/autofile.cpp \
+#  test/fuzz/banman.cpp \
+#  test/fuzz/base_encode_decode.cpp \
+#  test/fuzz/bech32.cpp \
+#  test/fuzz/bip324_cipher_roundtrip.cpp \
+#  test/fuzz/bip324_ecdh.cpp \
+#  test/fuzz/bitdeque.cpp \
+#  test/fuzz/block.cpp \
+#  test/fuzz/block_header.cpp \
+#  test/fuzz/blockfilter.cpp \
+#  test/fuzz/bloom_filter.cpp \
+#  test/fuzz/buffered_file.cpp \
+#  test/fuzz/chacha20_split_crypt.cpp \
+#  test/fuzz/chacha20_split_keystream.cpp \
+#  test/fuzz/chain.cpp \
+#  test/fuzz/checkqueue.cpp \
+#  test/fuzz/coins_view.cpp \
+#  test/fuzz/coinscache_sim.cpp \
+#  test/fuzz/connman.cpp \
+#  test/fuzz/crypto.cpp \
+#  test/fuzz/crypto_aes256.cpp \
+#  test/fuzz/crypto_aes256cbc.cpp \
+#  test/fuzz/crypto_chacha20.cpp \
+#  test/fuzz/crypto_common.cpp \
+#  test/fuzz/crypto_fschacha20.cpp \
+#  test/fuzz/crypto_diff_fuzz_chacha20.cpp \
+#  test/fuzz/crypto_hkdf_hmac_sha256_l32.cpp \
+#  test/fuzz/crypto_poly1305.cpp \
+#  test/fuzz/crypto_poly1305_split.cpp \
+#  test/fuzz/cuckoocache.cpp \
+#  test/fuzz/data_stream_addr_man.cpp \
+#  test/fuzz/decode_tx.cpp \
+#  test/fuzz/descriptor_parse.cpp \
+#  test/fuzz/ellswift_roundtrip.cpp \
+#  test/fuzz/eval_script.cpp \
+#  test/fuzz/fee_rate.cpp \
+#  test/fuzz/fees.cpp \
+#  test/fuzz/flatfile.cpp \
+#  test/fuzz/float.cpp \
+#  test/fuzz/golomb_rice.cpp \
+#  test/fuzz/headers_sync_state.cpp \
+#  test/fuzz/hex.cpp \
+#  test/fuzz/http_request.cpp \
+#  test/fuzz/integer.cpp \
+#  test/fuzz/key.cpp \
+#  test/fuzz/key_io.cpp \
+#  test/fuzz/kitchen_sink.cpp \
+#  test/fuzz/load_external_block_file.cpp \
+#  test/fuzz/locale.cpp \
+#  test/fuzz/merkleblock.cpp \
+#  test/fuzz/message.cpp \
+#  test/fuzz/miniscript_script.cpp \
+#  test/fuzz/miniscript_smart.cpp \
+#  test/fuzz/miniscript_stable.cpp \
+#  test/fuzz/miniscript_string.cpp \
+#  test/fuzz/minisketch.cpp \
+#  test/fuzz/mini_miner.cpp \
+#  test/fuzz/mini_miner_selection.cpp \
+#  test/fuzz/mocked_descriptor_parse.cpp \
+#  test/fuzz/muhash.cpp \
+#  test/fuzz/multiplication_overflow.cpp \
+#  test/fuzz/net.cpp \
+#  test/fuzz/net_permissions.cpp \
+#  test/fuzz/netaddress.cpp \
+#  test/fuzz/netbase_dns_lookup.cpp \
+#  test/fuzz/node_eviction.cpp \
+#  test/fuzz/p2p_transport_bidirectional.cpp \
+#  test/fuzz/p2p_transport_bidirectional_v1v2.cpp \
+#  test/fuzz/p2p_transport_bidirectional_v2.cpp \
+#  test/fuzz/p2p_transport_serialization.cpp \
+#  test/fuzz/parse_hd_keypath.cpp \
+#  test/fuzz/parse_numbers.cpp \
+#  test/fuzz/parse_script.cpp \
+#  test/fuzz/parse_univalue.cpp \
+#  test/fuzz/partially_downloaded_block.cpp \
+#  test/fuzz/policy_estimator.cpp \
+#  test/fuzz/policy_estimator_io.cpp \
+#  test/fuzz/pool_resource.cpp \
+#  test/fuzz/pow.cpp \
+#  test/fuzz/prevector.cpp \
+#  test/fuzz/primitives_transaction.cpp \
+#  test/fuzz/process_message.cpp \
+#  test/fuzz/process_messages.cpp \
+#  test/fuzz/protocol.cpp \
+#  test/fuzz/psbt.cpp \
+#  test/fuzz/random.cpp \
+#  test/fuzz/rbf.cpp \
+#  test/fuzz/rolling_bloom_filter.cpp \
+#  test/fuzz/rpc.cpp \
+#  test/fuzz/script.cpp \
+#  test/fuzz/script_assets_test_minimizer.cpp \
+#  test/fuzz/script_bitcoin_consensus.cpp \
+#  test/fuzz/script_descriptor_cache.cpp \
+#  test/fuzz/script_flags.cpp \
+#  test/fuzz/script_format.cpp \
+#  test/fuzz/script_interpreter.cpp \
+#  test/fuzz/script_ops.cpp \
+#  test/fuzz/script_sigcache.cpp \
+#  test/fuzz/script_sign.cpp \
+#  test/fuzz/scriptnum_ops.cpp \
+#  test/fuzz/secp256k1_ec_seckey_import_export_der.cpp \
+#  test/fuzz/secp256k1_ecdsa_signature_parse_der_lax.cpp \
+#  test/fuzz/signature_checker.cpp \
+#  test/fuzz/signet.cpp \
+#  test/fuzz/socks5.cpp \
+#  test/fuzz/span.cpp \
+#  test/fuzz/spanparsing.cpp \
+#  test/fuzz/string.cpp \
+#  test/fuzz/str_printf.cpp \
+#  test/fuzz/system.cpp \
+#  test/fuzz/timedata.cpp \
+#  test/fuzz/torcontrol.cpp \
+#  test/fuzz/transaction.cpp \
+#  test/fuzz/tx_in.cpp \
+#  test/fuzz/tx_out.cpp \
+#  test/fuzz/txorphan.cpp \
+#  test/fuzz/txrequest.cpp \
+#  test/fuzz/utxo_snapshot.cpp \
+#  test/fuzz/utxo_total_supply.cpp \
+#  test/fuzz/validation_load_mempool.cpp \
+#  test/fuzz/versionbits.cpp
 endif # ENABLE_FUZZ_BINARY
 
 nodist_test_test_bitcoin_SOURCES = $(GENERATED_TEST_FILES)
